--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "author": "Bastián Paredes",
-  "dependencies": {},
   "description": "My own useful packages",
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
@@ -14,11 +13,11 @@
     "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
-    "prettier": "^2.8.1",
     "rimraf": "^3.0.2",
     "rollup": "^3.7.4",
     "rollup-plugin-copy": "^3.4.0",
@@ -37,16 +36,16 @@
   },
   "scripts": {
     "clean": "rimraf ./components ./styles ./utils",
-    "fix": "npm run format:fix && npm run lint:fix && npm run test:u",
+    "fix": "npm run lint:fix && npm run test:u",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "lint:fix": "npm run lint -- --fix",
     "prepare": "npm run clean && npm run prepare --workspaces",
     "test": "npm run test --workspaces -- --passWithNoTests",
     "test:u": "npm run test --workspaces -- --passWithNoTests --ci --u"
   },
-  "version": "1.1.0",
+  "version": "1.1.1",
   "workspaces": [
     "./packages/**"
   ]
