--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -4,6 +4,7 @@
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "sass": "^1.56.2"
   },
   "description": "My own useful components",
