--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
@@ -43,7 +44,7 @@
     "test": "npm run test --workspaces -- --passWithNoTests --ci",
     "test:u": "npm run test -- --u"
   },
-  "version": "1.1.3",
+  "version": "1.1.4",
   "workspaces": [
     "./packages/**"
   ]
